--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
+    "sitemap": "^8.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^6.2.5"
+    "vite": "^6.2.5",
+    "vite-plugin-pages": "^0.33.0"
   }
 }
